--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -7,6 +7,11 @@ spec:
   selector:
     matchLabels:
       app: nginx
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
@@ -14,21 +19,17 @@ spec:
     spec:
       serviceAccountName: nginx-sa
       containers:
-      - name: nginx
-        image: nginx:1.21.6
-        ports:
-        - containerPort: 80
-        env:
-        - name: API_KEY
-          valueFrom:
-            secretKeyRef:
-              name: api-key-secret
-              key: api-key
-        securityContext:
-          runAsNonRoot: true
-          runAsUser: 1000
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
+        - name: nginx
+          image: nginxinc/nginx-unprivileged:1.21.6
+          ports:
+            - containerPort: 8080
+          env:
+            - name: API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: api-key-secret
+                  key: api-key
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 101
+            allowPrivilegeEscalation: false
